set(OP_NAME reduce_mean_with_count)
set(UT_EXE ${OP_NAME}_op_host_ut)

# Default SOC version for UT (ascend910_95 maps to Ascend950)
if(NOT DEFINED SOC_VERSION)
    set(SOC_VERSION "Ascend950")
endif()

message(STATUS "Building UT for SOC_VERSION: ${SOC_VERSION}")

# =============================================================================
# Op Host Source Files
# =============================================================================
set(OP_HOST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../op_host)

# arch35 tiling source for Ascend950
set(TILING_SRC ${OP_HOST_DIR}/arch35/${OP_NAME}_tiling.cpp)
set(TILING_DATA_H ${CMAKE_CURRENT_SOURCE_DIR}/../../../op_kernel/arch35/${OP_NAME}_tiling_data.h)

set(OP_HOST_SRCS
    ${OP_HOST_DIR}/${OP_NAME}_def.cpp
    ${OP_HOST_DIR}/${OP_NAME}_infershape.cpp
    ${TILING_SRC}
)

# =============================================================================
# UT Test Sources
# =============================================================================
set(UT_TEST_SRCS
    test_${OP_NAME}_infershape.cpp
    test_${OP_NAME}_tiling.cpp
)

# =============================================================================
# UT Test Main
# =============================================================================
set(UT_MAIN_SRC ${CMAKE_CURRENT_SOURCE_DIR}/test_op_host_main.cpp)

# =============================================================================
# Build op_host as SHARED library
# =============================================================================
set(OP_HOST_SO ${OP_NAME}_op_host_ut_lib)

add_library(${OP_HOST_SO} SHARED
    ${OP_HOST_SRCS}
)

# Include Directories for .so
target_include_directories(${OP_HOST_SO} PRIVATE
    ${UT_COMMON_INCLUDE_DIRS}
    ${OP_HOST_DIR}
    ${OP_HOST_DIR}/arch35
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../op_kernel/arch35
)

# Compile Definitions for .so
target_compile_definitions(${OP_HOST_SO} PRIVATE
    BUILD_SOC_VERSION=${SOC_VERSION}
    _GLIBCXX_USE_CXX11_ABI=0
)

# Link Libraries for .so
target_link_libraries(${OP_HOST_SO} PRIVATE
    -Wl,--no-as-needed

    -Wl,--whole-archive
        $ENV{ASCEND_HOME_PATH}/lib64/librt2_registry.a
        $ENV{ASCEND_HOME_PATH}/lib64/libtiling_api.a
    -Wl,--no-whole-archive

    $ENV{ASCEND_HOME_PATH}/lib64/libopp_registry.so
    $ENV{ASCEND_HOME_PATH}/lib64/libregister.so
    $ENV{ASCEND_HOME_PATH}/lib64/libmmpa.so
)

# =============================================================================
# Build UT Executable
# =============================================================================
add_executable(${UT_EXE}
    ${UT_MAIN_SRC}
    ${UT_TEST_SRCS}
    ${UT_COMMON_SRCS}
)

# Include Directories for UT
target_include_directories(${UT_EXE} PRIVATE
    ${UT_COMMON_INCLUDE_DIRS}
    ${OP_HOST_DIR}
    ${OP_HOST_DIR}/arch35
    ${CMAKE_CURRENT_SOURCE_DIR}/../../../op_kernel/arch35
)

# Compile Definitions for UT
target_compile_definitions(${UT_EXE} PRIVATE
    BUILD_SOC_VERSION=${SOC_VERSION}
    _GLIBCXX_USE_CXX11_ABI=0
)

# Compile Options
target_compile_options(${UT_EXE} PUBLIC
    -fPIE
    -fno-access-control
)

# Link Directories for UT
target_link_directories(${UT_EXE} PRIVATE
    ${UT_COMMON_LIB_DIRS}
    ${CMAKE_CURRENT_BINARY_DIR}
)

# =============================================================================
# Link Libraries for UT
# =============================================================================
target_link_libraries(${UT_EXE} PRIVATE
    gtest
    gtest_main

    -Wl,--no-as-needed

    $ENV{ASCEND_HOME_PATH}/lib64/libmetadef.so
    $ENV{ASCEND_HOME_PATH}/lib64/libunified_dlog.so
    $ENV{ASCEND_HOME_PATH}/lib64/libopp_registry.so
    $ENV{ASCEND_HOME_PATH}/lib64/libregister.so
    $ENV{ASCEND_HOME_PATH}/lib64/libgraph.so
    $ENV{ASCEND_HOME_PATH}/lib64/libgraph_base.so
    $ENV{ASCEND_HOME_PATH}/lib64/libplatform.so
    $ENV{ASCEND_HOME_PATH}/lib64/libc_sec.so
    $ENV{ASCEND_HOME_PATH}/lib64/libmmpa.so

    dl
    pthread
)

# =============================================================================
# Set RPATH
# =============================================================================
set_target_properties(${UT_EXE} PROPERTIES
    INSTALL_RPATH "$ORIGIN;$ENV{ASCEND_HOME_PATH}/lib64"
    BUILD_WITH_INSTALL_RPATH TRUE
)

# =============================================================================
# Print Summary
# =============================================================================
message(STATUS "")
message(STATUS "=== UT Build Configuration ===")
message(STATUS "  UT Executable: ${UT_EXE}")
message(STATUS "  OP Host Library: lib${OP_HOST_SO}.so")
message(STATUS "  SOC Version: ${SOC_VERSION}")
message(STATUS "  Tiling Source: ${TILING_SRC}")
message(STATUS "  Tiling Data Header: ${TILING_DATA_H}")
message(STATUS "==============================")
message(STATUS "")
